--- a/view/layout/public-layout.phtml
+++ b/view/layout/public-layout.phtml
@@ -59,13 +59,19 @@
 	<script src="<?php echo $this->basePath('/fullcalendar/fullcalendar.js') ?>"></script>
 	<script src="<?php echo $this->basePath('/js/flipclock.min.js') ?>"></script>
 
+<style>
+body { 
+	background-color: #ededed;
+}
+</style>
+
 </head>
 
 <body>
    
 	<header>
 		<!--Navbar-->
-		<nav class="navbar navbar-toggleable-md navbar-dark bg-primary fixed-top">
+		<nav class="navbar navbar-toggleable-md navbar-dark bg-primary">
 		    <div class="container">
 		        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
 		            <span class="navbar-toggler-icon"></span>
