--- a/view/ppit-document/public/display-page.phtml
+++ b/view/ppit-document/public/display-page.phtml
@@ -94,7 +94,7 @@ echo $this->partial('/partials/header');
 			            <!--/.Card image-->
 			
 			            <!--Card content-->
-			            <div class="card-block">
+			            <div class="card-block" style="color: #686868">
 			                <!--Text-->
 			                <div class="card-text">
 			                	<?php echo $context->localize($specifications['text']) ?>
