--- a/view/layout/public-layout.phtml
+++ b/view/layout/public-layout.phtml
@@ -57,6 +57,7 @@
 	<script src="<?php echo $this->basePath("ckeditor/ckeditor.js") ?>"></script>
 	<script src="<?php echo $this->basePath('/js/moment-with-locales.min.js') ?>"></script>
 	<script src="<?php echo $this->basePath('/fullcalendar/fullcalendar.js') ?>"></script>
+	<script src="<?php echo $this->basePath('/fullcalendar/lang-all.js') ?>"></script>
 	<script src="<?php echo $this->basePath('/js/flipclock.min.js') ?>"></script>
 
 <style>
@@ -119,12 +120,12 @@ body {
 	            <!--/.First column-->
 	
 	            <!--Second column-->
-	            <div class="col-md-6">
+<!--	            <div class="col-md-6">
 	                <h5 class="title"><?php echo $this->translate('Resources', 'ppit-core', $child->context->getLocale()) ?></h5>
 	                <ul>
 	                    <li><a href="<?php echo $this->url('public/displayBlog', array('directory' => 'blog', 'name' => key($child->context->getConfig('ppitDocument')['pages']['blog']))) ?>">Blog</a></li>
 	                    <li><a href="https://github.com/2pit-io/2pit.io" target='_blank'>Developer community</a></li>
-	                </ul>
+	                </ul> -->
 	            </div>
 	            <!--/.Second column-->
 	        </div>
